BUGFIX Admin dashboard title alignment (#55)

--- a/vroom-frontend/src/app/components/admin-dashboard/admin-dashboard.component.scss
+++ b/vroom-frontend/src/app/components/admin-dashboard/admin-dashboard.component.scss
@@ -52,10 +52,8 @@ button:hover {
   background-color: #3700b3;
 }
 
-
-
 mat-header-cell {
-  justify-content: center;
+  justify-content: start;
 }
 
 mat-row:hover {
